tests/invalid/sorted_non_list/main.py
x: int = 42
y: list[int] = sorted(x)
